# ska-sw-integration-testing

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  CHANGELOG.md  CODEOWNERS  Makefile  Makefile-low.mk  Makefile-mid.mk  README.md  pyproject.toml
Low/: __init__.py  xray-config.json
Low/features/system_level_tests/: xtp_64112_telescope_startup.feature  xtp_xxxxxx_telescope_startup.feature
Low/features/sytem_level_tests/: xtp_xxxxxx_telescope_startup.feature
Low/tests/: __init__.py  conftest.py  pytest.ini  xray-config.json
Low/tests/system_level_tests/: conftest.py  test_xtp_64114_telescopeon.py  test_xtp_64119_telescopestandby.py  test_xtp_64122_telescopeoff.py  test_xtp_xxxxx_telescopeoff.py  test_xtp_xxxxx_telescopestandby.py  test_xtp_xxxxxx_telescopeon.py  xtp_xxxxxx_telescopeon.py
Low/tests/tmc_csp/: test_standby_csp.py  test_startup_csp.py  test_xtp-29657_csp_assign_resources.py  test_xtp-29735_csp_release_resources.py  test_xtp-29854_configure.py  test_xtp-29855_end.py  test_xtp-30013_scan_csp.py  test_xtp-30014_endscan_csp.py  test_xtp_30147_abort_in_resourcing.py  test_xtp_30154_abort_in_configuring.py  test_xtp_30155_abort_in_scanning.py  test_xtp_30156_abort_in_idle_ready.py  test_xtp_30167_restart_in_aborted.py  test_xtp_60175_skb_476.py
Mid/features/: Assign
Mid/scripts/: import-features.py
Mid/tests/: conftest.py  pytest.ini  requirements.txt
gitlab_ci/: .gitlab-ci-csp-dish.yml  .gitlab-ci-dish.yml  .gitlab-ci-integration.yml  .gitlab-ci-on-demand.yml  .gitlab-ci-staging.yml  .gitlab-ci-tmc-csp.yml  .gitlab-ci-tmc-dish.yml  .gitlab-ci-tmc-sdp.yml
low/tests/: __init__.py  conftest.py  pytest.ini  xray-config.json
mid/tests/: conftest.py  pytest.ini  requirements.txt  xray-config.json
(+486 files in other folders)
